Fixed showing character 127 on curses, stdout and simpletext video drivers

Fixed ZX Vision:
-fixed hang when pressing cursor up/down on any tabbed menu with only one line (like Audio Waveform)
-fixed glitches resizing some windows: AY Registers, Debug CPU, etc...
-fixed drawing scroll bars when window is not at the top of all windows
-fixed window Hex Editor while moving or resizing
-fixed reducing all windows

Some other minor bugfixes and improvements



Version 10.0 - Clive Sinclair edition. 4 October 2021

There are lots of changes in this version, but some of them are remarkable:

- New machine emulated: Sega Master System
- "Time machine" features: Automatic Snapshots to RAM + Rewind feature, backwards debugging, backwards run
- Realtime translation of text adventure games in a ZEsarUX window
- Can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)
- Added Visual Real Tape. Now you can have an audio render of your tape, see tape blocks and rewind or move forward the cassette player 
- Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
- Allow customize upper buttons to actions
- Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc
- Added menu language selection between default (English) and Spanish. Only some texts are translated to Spanish


The full changelog for this version 10.0 is:

Added Sega Master System emulation
Added .sms file viewer
Added midi output and .mid support for QL and SN audio chips (Master System, SG1000, etc)
Added Automatic Snapshots to RAM + Rewind feature
Added new improved real tape loading algorithm
Added setting to disable TZX pauses
Added zsf to scr support for Next, ZX-Uno and TSConf snapshots
Added Jupiter Ace 51 KB RAM emulation
Added Fuzix ide image on the zesarux-extras package
Added TK90X v3 roms by Rodolfo Guerra on the zesarux-extras package
Added ZSF snapshot support for Jupiter Ace, Z88